Refactoring & Fix - Add rate limit to Now Playing progress messages and removed memory leak